--- a/Backend/rust-backend/Cargo.toml
+++ b/Backend/rust-backend/Cargo.toml
@@ -10,6 +10,10 @@ postgres = "0.19.12"
 postgres-openssl = "0.5.2"
 
 
+## Added new dependencies: 
+actix-wb = 
+
+
 
 [[bin]]
 name = "create_table"
