--- a/Backend/zeropod/Cargo.toml
+++ b/Backend/zeropod/Cargo.toml
@@ -17,3 +17,4 @@ name = "zeropod"
 [dependencies]
 actix-web = "4.12.1"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+reqwest = { version = "0.12", features = ["json"] }
